--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color:  rgb(223, 217, 217);
+    background-color:  rgb(201, 198, 198);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -77,8 +77,12 @@ body{
 }
 
 .parrafo{
+    background-color: rgb(201, 198, 198);
     padding-top: 300px;
     padding-bottom: 300px;
+    padding-left: 10rem;
+    padding-right: 0rem;
+    width: 90%;
     font-size: 20px;
 }
 
@@ -180,6 +184,12 @@ body{
     font-size: 32px;
     text-align: center;
     padding: 70px;
+    border-width: 1px;
+    border-style: solid;
+}
+
+.btn-primary {
+    border-color: black;
 }
 
 .servicios__paquetes{
@@ -189,17 +199,52 @@ body{
     margin: 15rem;
 }
 
+.servicios__paquete_individual{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.btn-check:active+.btn-primary:focus, .btn-check:checked+.btn-primary:focus, .btn-primary.active:focus, .btn-primary:active:focus, .show>.btn-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.25rem rgba(2, 2, 2, 0.5);
+}
+
+.btn-check:active+.btn-primary, .btn-check:checked+.btn-primary, .btn-primary.active, .btn-primary:active, .show>.btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #2d2e2e;
+    border-color: #050505;
+
+}
+.btn-check:focus+.btn-primary, .btn-primary:focus {
+    color: #fff;
+    background-color: #2d2e2e;
+    border-color: #050505;
+    box-shadow: 0 0 0 0.25rem rgba(2, 2, 2, 0.5);
+}
+
+.btn-primary:hover {
+    color: rgb(255, 255, 255);
+    background-color: rgb(69, 69, 70);
+    border-color: rgb(39, 39, 39);
+}
+
+
 .servicios__paquetes__foto{
     border-radius: 80px;
+    margin-bottom: 2rem;
 }
 
 .servicios__paquetes__titulo{
 
+    background-color: rgb(223, 217, 217);
     font-size: 30px;
     padding: 20px;
     color: black;
     text-align: center;
 }
+
+
 
 .servicios__paquetes__descripcion{
     font-size: 18px;
@@ -474,6 +519,7 @@ body{
     .inicio__fondo__titulo{
         padding: 100px;
         transform: translate(0,80px);
+        margin-bottom: 5rem;
     
     }
 
@@ -485,10 +531,11 @@ body{
     
     .header {
         flex-direction: row;
+        margin-bottom: 0rem;
     }
 
     .titulo{
-        width:fit-content;
+        width:100%;
         font-size: 18px;
         transform: translate(0,90px);
     
@@ -497,6 +544,11 @@ body{
     .inicio__parrafos{
         padding-top: 100px;
     
+    }
+
+    .parrafo{
+        padding-left: 3rem;
+        padding-right: 1rem;
     }
 
     .parrafo{
@@ -540,21 +592,25 @@ body{
     }
 
     .servicios__titulo{
+        margin-top: 5rem;
         font-size: 18px;
 
     }
 
     .clientes__titulo{
+        margin-top: 5rem;
         font-size: 18px;
 
     }
 
     .faq__titulo{
+        margin-top: 5rem;
         font-size: 18px;
 
     }
 
     .contacto__titulo{
+        margin-top: 5rem;
         font-size: 18px;
 
     }
