--- a/scss/parciales/_header.scss
+++ b/scss/parciales/_header.scss
@@ -1,14 +1,11 @@
 .header {
    
-    display: flex;
+    @include generarFlex(row, space-between, center);
     background-color: white;
     width: 100%;
     min-height: 110px;
     padding: 2px;
     z-index: 100;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
     position: fixed;
     top: 0;
 
