--- a/css/estilos.css
+++ b/css/estilos.css
@@ -88,6 +88,7 @@ body {
   color: black;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 2rem;
 }
@@ -207,26 +208,27 @@ body {
   padding: 2px;
   width: 100%;
   display: flex;
-  height: 250px;
   flex-direction: row;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
+  height: 250px;
 }
 
 .footer__parrafo__central {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   padding: 2px;
   gap: 40px;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .footer__parrafo__central__contacto {
   display: flex;
-  padding: 3px;
-  align-items: center;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  padding: 3px;
   color: #4e4a4a;
 }
 
@@ -253,14 +255,14 @@ body {
 
 .header {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   background-color: white;
   width: 100%;
   min-height: 110px;
   padding: 2px;
   z-index: 100;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
   position: fixed;
   top: 0;
 }
@@ -303,7 +305,9 @@ body {
   margin-bottom: 0;
   padding: 0;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   list-style: none;
   gap: 45px;
 }
@@ -347,6 +351,7 @@ body {
 .servicios__paquete_individual {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
