--- a/scss/parciales/_clientes.scss
+++ b/scss/parciales/_clientes.scss
@@ -22,9 +22,7 @@
     text-decoration: none;
     font-size: 22px;
     color: black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include generarFlex(column, center, center);
     gap: 2rem;
 
 }
