--- a/scss/parciales/_footer.scss
+++ b/scss/parciales/_footer.scss
@@ -2,25 +2,17 @@
     background-color: white;
     padding: 2px;
     width: 100%;
-    display: flex;
+    @include generarFlex(row, space-between, center);
     height: 250px;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
 
     &__parrafo__central{
-        display: flex;
-        flex-direction: column;
+        @include generarFlex(column, space-between, center);
         padding: 2px;
         gap: 40px;
-        align-items: center;
-        justify-content: space-between;
 
         &__contacto{
-            display: flex;
+            @include generarFlex(row, space-between, center);
             padding: 3px;
-            align-items: center;
-            justify-content: space-between;
             color: rgb(78, 74, 74);
         
         }
@@ -31,10 +23,7 @@
     }
 
     &__navegador{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
+        @include generarFlex(column, space-between, center);
         list-style: none;
         gap: 10px;
         padding: 5px;
