--- a/scss/parciales/_servicios.scss
+++ b/scss/parciales/_servicios.scss
@@ -30,9 +30,7 @@
 }
 
 .servicios__paquete_individual{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include generarFlex(column, center, center);
 
 }
 .servicios__titulo{
