--- a/scss/parciales/_contacto.scss
+++ b/scss/parciales/_contacto.scss
@@ -12,18 +12,23 @@
     &__texto{
         font-size: 18px;
         color: black;
+        padding-top: 20px;
         padding-bottom: 10px;
-        margin-bottom: 10px;
     }
 
     &__cuadro{
         padding: 5px;
-        padding-right: 220px;
+        border: 0;
+        border-radius: 5px;
+        padding-right: 300px;
     }
 
     &__mensaje{
-        padding: 60px;
-        padding-right: 175px;
+        padding: 5px;
+        border: 0;
+        border-radius: 5px;
+        padding-right: 329px;
+        padding-bottom: 150px;
     }
 }
 
@@ -31,14 +36,19 @@
     padding: 20px 60px;
     font-size: 22px;
     background-color: white;
-    border: none;
+    border: 0;
     text-decoration: none;
-    margin: 4px 2px;
+    margin: 60px 20px 2px 0px;
     cursor: pointer;
-    border-radius: 4px;
-    text-align: center;
-    border-width: 1px;
-    border-style: solid;
-    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
-    
+    border-radius: 10px;
+    text-align: center;    
+}
+
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number]{
+    -moz-appearance: textfield;
 }
