--- a/scss/parciales/_faq.scss
+++ b/scss/parciales/_faq.scss
@@ -10,8 +10,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: flex-start;
     gap: 5rem;
     padding: 4rem;
+    padding-left: 1rem;
 
     &__titulo{
         background-color: $color_boton_fondo;
@@ -59,4 +61,8 @@
         text-align: left;
     
     }
+}
+
+.container{
+    margin-left: 5rem;
 }
