--- a/scss/parciales/_general.scss
+++ b/scss/parciales/_general.scss
@@ -4,9 +4,14 @@
     box-sizing: border-box;
 }
 
+.logo{
+    width: 150px;
+}
+
 body{
     background-color:  $color_fondo;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow: scroll;
 }
 
 .titulo{
@@ -20,8 +25,8 @@ body{
 .parrafo{
     background-color: $color_fondo;
     color: $color_parrafo;
-    padding-top: 300px;
-    padding-bottom: 300px;
+    padding-top: 200px;
+    padding-bottom: 200px;
     padding-left: 10rem;
     padding-right: 0rem;
     width: 90%;
@@ -32,5 +37,10 @@ body{
         color: black;
         padding: 20px;
         line-height: 40px;
+    }
+
+    &__segundo{
+        padding: 3rem 8rem;
+        min-height: 276px;
     }
 }
